# dcfsm

./: README.md
demo/: CMakeLists.txt  demo.c
src/: .gitignore  CMakeLists.txt  fsm.c  fsm.h
